--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Ignore bundler config.
 /.bundle
 /config/database.yml
+/app/public/uploads/user/avatar/.
+/app/public/uploads/product/thumbnail/.
 
 
 
